--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+ @import "materialize/components/color-variables";
+ $primary-color: color("blue", "lighten-2") !default;
+ $secondary-color: color("yellow", "base") !default;
+ @import 'materialize';
+
+ .main {
+   padding: 50px;
+ }
+
+#loader {
+  display: none;
+  text-align: center;
+}
