--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -8,6 +8,7 @@
 <% end %>
 
 <h2>Accounts</h2>
+<%= link_to "Download", export_path, class: "btn blue", style: "color: white;" %>
 <table class="striped">
   <thead>
     <th>Account</th>
