--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   <nav>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">Cyclic Billing</a>
+      <ul class="right">
+        <% if user_signed_in? %>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+        <% end %>
+      </ul>
     </div>
   </nav>
   <body>
