--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -7,7 +7,7 @@
       <%= submit_tag "Import CSV", onclick: 'loader();', class: "btn blue" %>
 <% end %>
 
-<h2>Accounts</h2>
+<h2>Accounts Report</h2>
 <%= link_to "Download", export_path, class: "btn blue", style: "color: white;" %>
 <table class="striped">
   <thead>
